<resources>
    <string name="app_name">AndroidApp</string>
    <string name="cityTunja">Santiago de Tunja</string>
    <string name="infoGeneral">Información general:</string>
    <string name="tunja">Tunja es un municipio colombiano, capital del departamento de Boyacá. Tunja fue construida sobre Hunza, la capital de la confederación Muisca - Chibcha el 6 de agosto de 1539</string>
    <string name="location">Ubicación geográfica:</string>
    <string name="locationTunja">Santiago de Tunja está situado sobre la cordillera oriental de los Andes a 115 km al noreste de Bogotá. La extensión territorial del municipio de Tunja es de 121,4 km² de los cuales el 87% corresponde al área rural y el 13% al área urbana. Está ubicada en las coordenadas 5°32′7″N 73°22′04″O y su longitud en relación con Bogotá es de 0 grados, 43 minutos y 0 segundos. </string>
    <string name="temperature">Temperatura y climatología:</string>
    <string name="tempTunja">Según la clasificación de Köppen, Tunja posee un clima de tipo Csb: templado y frío de alta montaña. La temperatura promedio anual es de 12,7 grados.</string>
    <string name="sites">Sitios recomendados:</string>
    <string name="sitesTunja">El Centro Histórico de Tunja fue declarado Monumento Nacional en 1959, ya que conserva, en sus edificaciones coloniales (palacios, conventos, iglesias y calles inclinadas), valiosos tesoros artísticos, pinturas, esculturas y ornamentos. Tunja es un centro para la práctica deportiva de alto rendimiento, debido a su nivel bajo de contaminación ambiental y su altitud.</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="title_activity_detail">DetailActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notificaciones</string>
    <string name="sync_header">Sonido</string>


    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Configuración</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>