<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context = ".SitiosDescripcionFragment"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/cityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cabeza"
            android:padding="10dp"
            android:text="@string/cityTunja"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tunja_500px"
            app:layout_constraintTop_toBottomOf="@id/cityName"

            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/titleDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/infoGeneral"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/tunja"
            app:layout_constraintTop_toBottomOf="@id/titleDescripcion" />

        <TextView
            android:id="@+id/titleLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/location"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/locationTunja"
            app:layout_constraintTop_toBottomOf="@id/titleLocation" />

        <TextView
            android:id="@+id/titleTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/temperature"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textLocation" />

        <TextView
            android:id="@+id/textTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/tempTunja"
            app:layout_constraintTop_toBottomOf="@id/titleTemperature" />

        <TextView
            android:id="@+id/titleSites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:text="@string/sites"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textTemperature" />

        <TextView
            android:id="@+id/textSites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingHorizontal="16dp"
            android:paddingBottom="10dp"
            android:text="@string/sitesTunja"
            app:layout_constraintTop_toBottomOf="@id/titleSites" />


        <ImageButton
            android:id="@+id/imageButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#4CAF50"
            android:src="@drawable/map_button"
            app:layout_constraintBottom_toTopOf="@+id/titleDescripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>